--- a/index.css
+++ b/index.css
@@ -1,7 +1,14 @@
 
 body{
   text-align: center;
+  background-image: url("ts.jpg");
+  background-size:100vw 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
+
 * {
     box-sizing: border-box;
   }
